# otk2023-harjoitustyo

./: .gitignore  README.md
harjoitustyo/dokumentaatio/: tyoaikakirjanpito.md
harjoitustyo/tetris/: pyproject.toml
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: kaaviotvk3.md
tetris/: .coveragerc  pyproject.toml  tasks.py
tetris/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
tetris/src/: main.py
tetris/src/GUI/: display.py  interaction.py
tetris/src/database/: database.db  db_interact.py
tetris/src/gui/: display.py  interaction.py
tetris/src/logic/: core.py  movement.py  score.py
tetris/src/model/: tetris_block.py  tetris_grid.py
tetris/src/tests/: database_test.py  model_test.py
tetris/src/tests/logic/: movement_test.py  score_test.py  test_core.py
tetris/src/tests/model/: grid_test.py  line_test.py  square_test.py
