[tool.poetry]
name = "tetris-py"
version = "0.0.0"
description = "tetris harjoitus"
authors = ["KyperCT <38316792+KyperCT@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pylint = "^2.17.1"
coverage = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
